Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53268

Regression QML Video surface format options discarded

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.9.3
    • 5.5.0, 5.5.1, 5.6.0, 5.6.1, 5.7.0 Alpha, 5.7.0 Beta
    • Multimedia
    • None

    Description

      Regression caused by Change-Id: Ice1483f8c2daec5a43536978627a7bbb64549480 / commit 3e94b7ce2d8166767ec47425d2cefbc77cb5fde2

      src/qtmultimediaquicktools/qdeclarativevideooutput_render.cpp
      -                videoNode = factory->createNode(m_surface->surfaceFormat());
      +                // Get a node that supports our frame. The surface is irrelevant, our
      +                // QSGVideoItemSurface supports (logically) anything.
      +                videoNode = factory->createNode(QVideoSurfaceFormat(m_frame.size(), m_frame.pixelFormat(), m_frame.handleType()));
      

      Since the original surface format is not used any additional QVideoSurfaceFormat options like yCbCrColorSpace will never make it to the QSGVideoNode implementation.

      Workaround revert above change. I'm not sure what side effects it has, but works for our purpose of getting full color range videos (QVideoSurfaceFormat::YCbCr_JPEG).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            valentyn.doroshchuk Valentyn Doroshchuk
            kristjanbb Kristján Birgisson
            Votes:
            2 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes